# OmniScene

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  run.py
backend/: init_db.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: analysis.py  auth.py  chat.py  health.py  history.py
backend/app/core/: database.py  security.py
backend/app/ml/: base.py  pipeline.py  registry.py
backend/app/ml/explainability/: gradcam.py
backend/app/ml/models/: animal_recognizer.py  disease_detector.py  embedding_model.py  plant_recognizer.py  plant_village.py  scene_classifier.py
backend/app/ml/vector_store/: faiss_store.py
backend/app/models/: analysis.py  user.py
backend/app/schemas/: analysis.py  common.py  detection.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/analysis/: ConfidenceBadge.tsx  GradCAMViewer.tsx  ImageChat.tsx  ImageUploader.tsx  ResultsDashboard.tsx  SimilarResults.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: analysis.ts
